[package]
name = "logbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "4.0.10", features = ["derive"] }
env_logger = "0.9.1"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
